# mcp-location-server

./: CONTRIBUTING.md  Makefile  README.md  REQUIREMENTS.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  test_client.py
.github/workflows/: ci.yml
scripts/: test-server.sh  update_cursor_config.py
src/mcp_location_server/: __init__.py  elevation.py  geocoding.py  models.py  server.py
tests/: __init__.py  test_elevation.py  test_geocoding.py
